# RayStar

./: .gitignore  CMakeLists.txt  EsDecrementable.h  FirstC++RayTest  GameObject.cpp  GameObject.h  Gameplay.cpp  Gameplay.h  Makefile  README.md  Scene.cpp  Scene.h  UI.cpp  UI.h  main.code-workspace  main.cpp
Abstractos/: AStar.cpp  AStar.h  ColaCasillas.cpp  ColaCasillas.h  ColaCasillasCustom.cpp  ColaNodes.cpp  ColaNodes.h  DebugColaCasillas.cpp  DebugColaCasillas.h
Aux/Doc/: Debug de pasos de cola.txt  Eventos con argumentos.txt  Instrucciones.txt  Patrones.txt  Text box
Descartado/: UI.txt
Doc/: Cola decrementable.txt  Prueba cola.txt
Escenas/: Adicional.h  EsDecrementable.cpp  EsDecrementable.h  Gameplay.cpp  Gameplay.h  Tittle.cpp
Motor/: GameObject.cpp  GameObject.h  Scene.cpp  Scene.h  UI.cpp  UI.h
engine/: CMakeLists.txt
engine/include/EngineObjects/: GameObject.h  UI.h
engine/include/Misc/: CommonInfo.h
engine/include/ProgramFlow/: Application.hpp  Scene.h
engine/src/: Application.cpp  GameObject.cpp  Scene.cpp  UI.cpp
game/: CMakeLists.txt
game/include/: CommonInfo.h  Game.hpp
game/include/Containers/: AStar.h  ColaCasillas.h  ColaNodes.h  DebugColaCasillas.h
game/include/Scenes/: EsDecrementable.h  Gameplay.h  Logo.h  Tittle.h
game/src/: Game.cpp  main.cpp
game/src/Containers/: AStar.cpp  ColaCasillas.cpp  ColaNodes.cpp  DebugColaCasillas.cpp
game/src/Scenes/: Adicional.cpp  CommonInfo.cpp  EsDecrementable.cpp  Gameplay.cpp  Logo.cpp  Tittle.cpp
resources/: Text.ods
